<?xml version="1.0"?>

<resources>

    <string name="app_name">Mere新闻</string>

    <string name="successful">成功</string>

    <string name="fail">失败</string>

    <string name="save">保存</string>

    <string name="sort">排序</string>

    <string name="big">大号</string>

    <string name="normal">标准</string>

    <string name="small">小号</string>

    <string name="largest">最大</string>

    <string name="mini">最小</string>

    <string name="setting">设置</string>

    <string name="message_permission_rationale">为保证App功能正常运行,请同意权限</string>

    <string name="message_permission_always_failed">请到设置中给予本App权限:\n\n%1$s</string>

    <string name="message_setting_comeback">从设置中回来了</string>

    <string name="message_install_failed">安装应用的权限被禁止了</string>

    <string name="message_overlay_failed">在其他应用上显示的权限被禁止了</string>

    <string name="apk_name">android.apk</string>

    <string name="action_comment">评论</string>

    <string name="action_video">悬浮视频</string>

    <string name="action_link">复制链接</string>

    <string name="action_browser">浏览器中打开</string>

    <string name="action_star">收藏</string>

    <string name="action_share">分享</string>

    <string name="action_delete_all">全部删除</string>

    <string name="action_list_number">统计</string>

    <string name="action_block_source">屏蔽该来源</string>

    <string name="action_block_keywords">屏蔽关键词</string>

    <string name="no_video">没有视频内容哦</string>

    <string name="not_support">该功能不支持</string>

    <string name="source">新闻源</string>

    <string name="keywords">关键词</string>

    <string name="star_no">已取消收藏</string>

    <string name="star_yes">已添加收藏</string>

    <string name="history">历史</string>

    <string name="about">关于</string>

    <string name="block_rule">屏蔽规则</string>

    <string name="loading">正在加载</string>

    <string name="load_success">加载成功</string>

    <string name="load_fail">加载失败</string>

    <string name="server_fail">服务器返回数据异常</string>

    <string name="download">下载</string>

    <string name="download_img_q">是否下载当前图片?</string>

    <string name="download_success">下载成功</string>

    <string name="download_fail">下载失败</string>

    <string name="empty_content">什么也没有...</string>

    <string name="no_comment">没有评论哦</string>

    <string name="news">报道</string>

    <string name="setting_basic">基础</string>

    <string name="setting_view">视图</string>

    <string name="setting_data">数据</string>

    <string name="setting_other">其他</string>

    <string name="language">语言</string>

    <string name="clear_cache">清空缓存</string>

    <string name="clear_cache_detail">可选收藏/历史/新闻缓存</string>

    <string name="news_cache">新闻缓存数据</string>

    <string name="all">全部</string>

    <string name="auto_refresh">自动刷新</string>

    <string name="auto_refresh_detail">切换时自动刷新</string>

    <string name="auto_loadmore">预加载数据</string>

    <string name="auto_loadmore_detail">当快浏览到尽头时提前加载,避免等待,更耗费流量</string>

    <string name="night_theme">亮暗切换</string>

    <string name="list_type">列表式样</string>

    <string name="notice">关闭刷新提醒</string>

    <string name="notice_detail">刷新成功的底部提醒将关闭</string>

    <string name="status_bar">状态栏强制适配</string>

    <string name="status_bar_detail">主页状态栏强制添加半透明</string>

    <string name="input_backup">恢复数据</string>

    <string name="input_backup_detail">导入已备份好的数据备份</string>

    <string name="export_backup">备份数据</string>

    <string name="export_backup_detail">包含设置/频道顺序/屏蔽规则</string>

    <string name="check_update">检查更新</string>

    <string name="check_update_detail">当前版本为:</string>

    <string name="join_us">加用户群</string>

    <string name="join_us_detail">企鹅群号:938435700</string>

    <string name="join_us_error">没有找到手Q</string>

    <string name="donate">捐赠</string>

    <string name="donate_detail">顺便在备注中许个愿</string>

    <string name="swipe_back">滑动返回</string>

    <string name="swipe_back_detail">从左向右滑动页面返回</string>

    <string name="high_ram">加强缓存</string>

    <string name="high_ram_detail">占用更多内存以提高应用流畅度</string>

    <string name="back_exit">首页返回键退出</string>

    <string name="back_exit_detail">双击返回键直接退出应用</string>

    <string name="random_header_server">封面设置</string>

    <string name="text_size">文章字号</string>

    <string name="random_header_pic_per">滑动轮播</string>

    <string name="random_header_pic_auto">自动轮播</string>

    <string name="random_header_color_gradual">渐变色轮播</string>

    <string name="random_header_color_pure">纯色轮播</string>

    <string name="custom_header_color_pure">自定义纯色</string>

    <string name="click_to_exit">再按一次退出应用</string>

    <string name="start_after_exit">退出界面后生效</string>

    <string name="start_after_restart_list">下拉刷新新闻后生效</string>

    <string name="easter_egg_tip">已开启彩蛋功能</string>

    <string name="start_after_restart_app">下次进入应用生效</string>

    <string name="tip_title">友情提示</string>

    <string name="update_title">发现一个新版本</string>

    <string name="update_message">您可到应用商店(酷安)更新,或点击确认进行下载安装</string>

    <string name="update_title_no">恭喜,当前已是最新版本</string>
    
    <string name="input_message">请将之前备份后获得的一串字符粘贴到下方</string>

    <string name="export_message">导出后,将生成一串字符并自动复制到您的剪贴板,请妥善保管</string>

    <string name="subscribe_my_category">已选栏目</string>

    <string name="subscribe_more_category">更多栏目</string>

    <string name="channel">频道</string>

    <string name="channel_select">频道选择</string>

    <string name="channel_tip1">长按排序或者删除</string>

    <string name="channel_tip2">点击添加</string>

    <string name="delete">删除</string>

    <string name="delete_message">是否删除该条内容</string>

    <string name="repeated">这条重复了</string>

    <string name="shortcut_star">收藏记录</string>

    <string name="shortcut_disabled">快捷方式已被禁用</string>

    <string name="zhihu">知乎日报</string>

    <string name="guokr">果壳精选</string>

    <string name="tab_netease">网易</string>

    <string name="tab_other">其他</string>

    <string name="tab_video">视频</string>

    <string name="tab_ithome">IT之家</string>

    <string name="tab_press">报刊</string>

    <string name="tab_smartisan">锤子</string>
    
    <string name="type_phone">手机</string>

    <string name="type_tablet">平板</string>
    
    <string name="color_choose">选择颜色</string>

    <string name="sort_tip">长按并拖动改变分类顺序</string>

    <string name="reading_record">阅读记录</string>

    <string name="shared_reading_record">我已经在"Mere新闻"中{type}{num}篇新闻</string>

    <string name="collected">收藏了</string>

    <string name="read">阅读了</string>

    <string name="message_reading_record">您目前已在"Mere新闻"中{type}{num}篇新闻</string>

    <string name="notification">推送</string>

    <string name="notification_detail">总开关</string>

    <string name="notification_ticker">您有一条新的热点新闻</string>

    <string name="notification_tip">推送间隔时间具体由系统安排,为了尽可能节约资源，国产机型请尝试添加后台运行白名单(后台运行权限/电池优化等)。另外深夜时段固定是静默推送。</string>
    
    <string name="notification_time">推送频率</string>

    <string name="notification_time_detail">修改最小间隔频率</string>

    <string name="notification_sound">静默推送</string>

    <string name="notification_sound_detail">不禁止振动和铃声</string>

    <string name="notification_mode">兼容模式</string>

    <string name="notification_mode_detail">功能正常则不要开启</string>

    <string name="time_level_1">频繁</string>
    <string name="time_level_2">一般</string>
    <string name="time_level_3">随缘</string>
    <string name="time_level_4">极少</string>

    <string name="message_save_title">是否立即应用改动？</string>
    <string name="message_save_message">应用将重启以使改动生效</string>

    <string name="click2detail">点击查看详情</string>

    <string name="skeleton">加载动画</string>
    <string name="skeleton_detail">使用闪烁动画填充内容</string>

    <string name="auto_night">自动夜间模式</string>
    <string name="auto_night_detail">跟随系统的夜间模式(9.0系统为省电模式)</string>

    <string name="tip_to_close_auto_night">请在设置中关闭自动夜间模式后操作</string>

    <string name="haptic">振动反馈</string>
    <string name="haptic_detail">建议线性马达机型使用</string>

    <string name="no_image">省流模式</string>
    <string name="no_image_detail">尽量不加载图片以及视频</string>

    <string name="auto">Auto</string>

    <string name="english">English</string>

    <string name="chinese">中文</string>

    <string name="explorer_title">邀请您试用MereNews探索版</string>

    <string name="explorer_message">目前仅针对少数粉丝开放使用,试试看吗?注意对设备性能有一定要求哦</string>

    <string name="support_offline">支持离线</string>

    <string name="home">首页</string>
</resources>