<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_his"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/nav_coll"
            android:title="@string/action_star"
            android:icon="@drawable/ic_collections"/>

        <item
            android:id="@+id/nav_block"
            android:title="@string/block_rule"
            android:icon="@drawable/ic_visibility_off"/>

        <item android:id="@+id/nav_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"/>

        <item android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_about"/>

        <item android:id="@+id/nav_theme"
            android:title="@string/night_theme"
            android:icon="@drawable/ic_theme"/>
    </group>
</menu>