<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ToolbarPopupTheme" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_normal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/awesome_background"
            android:padding="@dimen/margin_normal"
            android:text="@string/notification_tip"
            android:textColor="@color/main_text_color"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintEnd_toStartOf="@id/sw_push"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_push"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/notification"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_normal"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@id/sw_push"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_push_detail"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:onClick="onClick"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/notification_detail"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toStartOf="@id/sw_push"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_push" />

        <Switch
            android:id="@+id/sw_push"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toBottomOf="@id/tv_push_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_push" />

        <View
            android:id="@+id/view_push_sound"
            android:layout_width="0.0dip"
            android:layout_height="1.0px"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_push_detail" />

        <TextView
            android:id="@+id/tv_push_sound"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/notification_sound"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_normal"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@id/sw_push_sound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_push_sound" />

        <TextView
            android:id="@+id/tv_push_sound_detail"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:onClick="onClick"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/notification_sound_detail"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toStartOf="@id/sw_push_sound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_push_sound" />

        <Switch
            android:id="@+id/sw_push_sound"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toBottomOf="@id/tv_push_sound_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_push_sound" />

        <View
            android:id="@+id/view_push_time"
            android:layout_width="0.0dip"
            android:layout_height="1.0px"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_push_sound_detail" />

        <TextView
            android:id="@+id/tv_push_time"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/notification_time"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_push_time" />

        <TextView
            android:id="@+id/tv_push_time_detail"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:onClick="onClick"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/notification_time_detail"
            android:textColor="@color/main_text_color_dark"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_push_time" />

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/sb_push_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            app:bsb_max="120"
            app:bsb_hide_bubble="true"
            app:bsb_auto_adjust_section_mark="true"
            app:bsb_track_color="@color/main_text_color"
            app:bsb_second_track_color="@color/seek_bar_color"
            app:bsb_section_count="3"
            app:bsb_section_text_position="below_section_mark"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_touch_to_seek="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_push_time_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>