<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/my_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/subscribe_my_category"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:text="@string/channel_tip1"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@id/my_category_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/my_category_text" />

        <androidnews.kiloproject.widget.DragGrid
            android:id="@+id/userGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:horizontalSpacing="@dimen/margin_small"
            android:listSelector="@android:color/transparent"
            android:numColumns="4"
            android:scrollbars="vertical"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_category_text" />


        <View
            android:id="@+id/divider"
            android:layout_width="0.0dip"
            android:layout_height="1.0px"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userGridView" />

        <TextView
            android:id="@+id/more_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/subscribe_more_category"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:text="@string/channel_tip2"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@id/more_category_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/more_category_text" />

        <androidnews.kiloproject.widget.OtherGridView
            android:id="@+id/otherGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:horizontalSpacing="@dimen/margin_small"
            android:listSelector="@android:color/transparent"
            android:numColumns="4"
            android:scrollbars="vertical"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_category_text" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>